--- a/main.css
+++ b/main.css
@@ -58,12 +58,14 @@ ul li{
     max-width: 25%;
     list-style: none;
     position: relative;
-    max-height: 280px;
+    max-height: 250px;
     overflow-y: hidden;
 }
 
 ul li img{
     width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
 
 .overlay-imagem-link {
